--- a/app/views/teachers/tags.html.erb
+++ b/app/views/teachers/tags.html.erb
@@ -1,25 +1,30 @@
 <p>app/views/teachers/tags.html.erb</p>
 <h1><%= "#{@teacher.fname}'s Tags" %></h1>
 
-<%= form_for @tag, :url => "/editinfo" do |f| %>
+<%= form_for @tag, :url => updatetags_path do |f| %>
 	
   <% (1..12).each do |g| %>
 
-    <div><%= f.label :grade_levels[g], "#{g.ordinalize} grade" %>
-    <%= check_box_tag :grade_levels[g] %> </div>
+  <div><label ><%= "#{g.ordinalize} grade" %>
+  <input type="checkbox" "grade", "grade_#{g}" %></div>
 
+
+  <!--
+    <div><%= label :grade_levels, "#{g.ordinalize} grade" %>
+    <%= check_box "#{:grade_levels}[#{g}]", :value => g.to_s %></div>
+  -->
   <% end %>
 
   <br />
 
   <div><%= f.label :subjects, "Subject Tags" %><br />
-  <%= f.text_field :subjects %></div>
+  <%= f.text_field :subjects, :value => @tag.subjects.join(' ') %></div>
 
   <div><%= f.label :standards, "Standard Tags" %> <br />
-  <%= f.text_field :standards %></div>
+  <%= f.text_field :standards, :value => @tag.standards.join(' ') %></div>
 
   <div><%= f.label :other, "Other Tags" %> <br />
-  <%= f.text_field :other %></div>
+  <%= f.text_field :other, :value => @tag.other.join(' ') %></div>
 
   <div><%= f.submit "Update" %></div>
 
