--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Claco | <%= @title %></title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-      <header>
-        <%= render 'layouts/navigation' %>
-    </header>
-<%= yield %>
-
-</body>
+	<head>
+		<title>Claco | <%= @title %></title>
+		<%= stylesheet_link_tag    "application", :media => "all" %>
+		<%= javascript_include_tag "application" %>
+		<%= csrf_meta_tags %>
+	</head>
+	<body>
+		<header>
+			<%= render 'layouts/navigation' %>
+		</header>
+		<%= yield %>
+		<% if Rails.env.development? %>
+		<div style="position:absolute; border:1px solid black; bottom:30px;">
+			<%= debug(params) %>
+			<hr />
+			<%= params.inspect %>
+		</div>
+		<% end %>
+	</body>
 </html>
