--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
 		<header>
 			<%= render 'layouts/navigation' %>
 		</header>
+		<% if current_teacher %>
+		<%= current_teacher.inspect %>
+		<% end %>
+		<%= %> <!-- render 'shared/error_messages' -->
 		<%= yield %>
 		<% if Rails.env.development? %>
-		<div style="position:absolute; border:1px solid black; bottom:30px;">
+		<div style="position:absolute; border:1px solid black; bottom:10px; right:10px;">
 			<%= debug(params) %>
-			<hr />
-			<%= params.inspect %>
 		</div>
 		<% end %>
 	</body>
