--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-	<div id="error_explanation">
+	<div style="border: 1px solid red;">
 	<h2><%= pluralize(object.errors.count, "error") %>
 	prohibited this <%= object.class.to_s.underscore.humanize.downcase %>
 	from being saved:</h2>
