--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -1,20 +1,22 @@
 <p>app/views/teachers/editinfo.html.erb</p>
-<!-- <%= @teacher.fname %> -->
+
 <%= current_teacher.fname %>
-<br
-/><br />
-<!-- form_for @info, :url => updateinfo_path do |f| -->
+<br />
+<br />
+
 <%= form_for current_teacher.info, :url => updateinfo_path do |f| %>
 
-  <div><%= f.label :bio, "Bio" %><br />
-  <%= f.text_area :bio %></div>
+	<!-- render 'shared/error_messages' -->
 
-  <div><%= f.label :profile_picture, "Profile Picture (url)" %><br />
-  <%= f.text_field :profile_picture %></div>
+	<div><%= f.label :bio, "Bio" %><br />
+	<%= f.text_area :bio %></div>
 
-  <div><%= f.label :website, "Website" %> <br />
-  <%= f.text_field :website %></div>
+	<div><%= f.label :profile_picture, "Profile Picture (url)" %><br />
+	<%= f.text_field :profile_picture %></div>
 
-  <div><%= f.submit "Update" %></div>
+	<div><%= f.label :website, "Website" %> <br />
+	<%= f.text_field :website %></div>
+
+	<div><%= f.submit "Update" %></div>
 
 <% end %>
