--- a/app/views/binders/show.html.erb
+++ b/app/views/binders/show.html.erb
@@ -1,8 +1,6 @@
 <h3>Binders#show</h3>
 <p>app/views/binders/show.html.erb</p>
-<p>Currently in: <%= @binder.title %></p>
-
-<p><% @binder.parents.each do |parent| %>
+<p>Currently in:<% @binder.parents.each do |parent| %>
 
 	<% if parent["id"] == "0" %>
 		<%= link_to "Root", binders_path %> /
@@ -11,9 +9,13 @@
 	<% end %>
 <% end %><%= link_to @binder.title, binder_path(@binder) %></p>
 
-<% @children.each do |binder| %>
-  <p>Binder: <%=link_to binder.title, binder %></p>
+<div>Contents:<br />
+<% if @children.empty? %>
+	<p>Empty</p>
 <% end %>
-
-<%= link_to "Up one level", @binder.parent["id"].to_s == "0" ? binders_path : binder_path(@binder.parent["id"]) %>
+<% @children.each do |binder| %>
+  <%=link_to binder.title, binder %>
+<% end %></div>
+<br />
+<%= link_to "Up one level", @binder.parent["id"] == "0" ? binders_path : binder_path(@binder.parent["id"]) %>
 <%= link_to "Create new binder", new_binder_path %>
