--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,15 @@
 		<header>
 			<%= render 'layouts/navigation' %>
 		</header>
-		<% if current_teacher %>
+		<!-- <% if current_teacher %>
 		<%= current_teacher.inspect %>
-		<% end %>
+		<% end %> -->
 		<%= %> <!-- render 'shared/error_messages' -->
 		<%= yield %>
-		<% if Rails.env.development? %>
+		<!--<% if Rails.env.development? %>
 		<div style="position:absolute; border:1px solid black; bottom:10px; right:10px;">
 			<%= debug(params) %>
 		</div>
-		<% end %>
+		<% end %> -->
 	</body>
 </html>
