migrated teacher controller db actions to model

--- a/app/views/teachers/confadd.html.erb
+++ b/app/views/teachers/confadd.html.erb
@@ -1,4 +1,3 @@
 
 
-<p>You are now colleague request accepted/sent to <%= link_to "#{@teacher.fname} #{@teacher.lname}", teacher_path(@teacher) %></p>
-
+<p>Your colleague request was sent to <%= link_to "#{ @teacher.full_name }", teacher_path(@teacher) %></p>
