--- a/app/views/teachers/confunsub.html.erb
+++ b/app/views/teachers/confunsub.html.erb
@@ -1,4 +1,3 @@
 
 
-<p>You are now unsubscribed from <%= "#{@teacher.fname} #{@teacher.lname}" %></p>
-
+<p>You are now unsubscribed from <%= "#{@teacher.full_name}" %></p>
