--- a/app/views/teachers/confremove.html.erb
+++ b/app/views/teachers/confremove.html.erb
@@ -1,2 +1,2 @@
 
-<p>You are no longer colleagues with <%= link_to "#{@teacher.fname} #{@teacher.lname}", teacher_path(@teacher) %></p>
+<p>You are no longer colleagues with <%= link_to "#{@teacher.full_name}", teacher_path(@teacher) %></p>
