--- a/app/views/binders/index.html.erb
+++ b/app/views/binders/index.html.erb
@@ -1,6 +1,14 @@
 <h3>Binders#index</h3>
 <p>app/views/binders/index.html.erb</p>
-<% @binders.each do |binder| %>
-  <p>Binder: <%=link_to binder.title, binder %></p>
-<% end %>
-<%= link_to "Create new binder", new_binder_path %>
+<p>Currently In: <%= link_to "Home", binders_path %> </p>
+
+<div>Contents:
+	<br />
+	<% @binders.each do |binder| %>
+	<%= link_to binder.title, binder %>
+  	<%= !binder.body.blank? ? ("(#{binder.body[0..20]}" + (binder.body.length > 20 ? "...)" : ")")) : "" %>
+  	<br />
+	<% end %>
+</div>
+<br />
+<%= link_to "Create new binder", new_binder_path %> | <%= link_to "Add content", binders_newcontent_path %>
