--- a/app/views/binders/index.html.erb
+++ b/app/views/binders/index.html.erb
@@ -11,4 +11,4 @@
 	<% end %>
 </div>
 <br />
-<%= link_to "Create new binder", new_binder_path %> | <%= link_to "Add content", binders_newcontent_path %>
+<%= link_to "Create new binder", new_binder_path %>
