--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -7,6 +7,7 @@
 <%= form_for current_teacher.info, :url => updateinfo_path do |f| %>
 
 	<!-- render 'shared/error_messages' -->
+	<%= render 'shared/error_messages', object: f.object %>
 
 	<div><%= f.label :bio, "Bio" %><br />
 	<%= f.text_area :bio %></div>
