--- a/app/views/binders/show.html.erb
+++ b/app/views/binders/show.html.erb
@@ -22,6 +22,12 @@
 	<% @children.each do |binder| %>
 		<% if binder.type == 2 %>
 
+			<% if binder.format == 1 %>
+				<%= link_to binder.title, binder.versions.last.file.url %>
+				(<%= link_to "Edit", edit_binder_path(binder) %>)
+
+			<% end %>
+
 			<% if binder.format == 2 %>
 				<%= link_to binder.title, binder.versions.last.data, :target => "_blank" %>
 				(<%= link_to "Edit", edit_binder_path(binder) %>)
@@ -38,4 +44,5 @@
 <%= link_to "Up one level", @binder.parent["id"] == "0" ? binders_path : binder_path(@binder.parent["id"]) %> | 
 <%= link_to "Create new binder", new_binder_path %> | 
 <%= link_to "Edit this binder", edit_binder_path(@binder) %> |
-<%= link_to "Add content", binders_newcontent_path %>
+<%= link_to "Add content", binders_newcontent_path %> |
+<%= link_to "Add File", binders_newfile_path %>
