--- a/app/views/teachers/tags.html.erb
+++ b/app/views/teachers/tags.html.erb
@@ -6,7 +6,7 @@
 	<!-- f.error_messages -->
 	<%= render 'shared/error_messages', object: f.object %>
 
-	<table><tr><td>
+	<table><tr><td valign="top">
 	<% (0..19).each do |grade_level| %>
 	<%= check_box( "tag", "grade_levels", { :id => "tag_grade_levels",
 						:name => "tag[grade_levels][]",
@@ -15,7 +15,7 @@
 	<%= f.label :grade_levels[grade_level], grade_level_title_by_index(grade_level) %><br />
 	<% end %>
 	</td>
-	<td>
+	<td valign="top">
 	<% (0..11).each do |subject| %>
 	<%= check_box( "tag", "subjects",     { :id => "tag_subjects",
 						:name => "tag[subjects][]",
