--- a/app/views/binders/show.html.erb
+++ b/app/views/binders/show.html.erb
@@ -22,20 +22,17 @@
 	<% @children.each do |binder| %>
 		<% if binder.type == 2 %>
 
-			<% if binder.format == 1 %>
-				<%= link_to binder.title, binder.versions.last.file.url %>
-				(<%= link_to "Edit", edit_binder_path(binder) %>)
+			<%= link_to binder.title, binder.versions.last.file.url if binder.format == 1 %>
+			
+			<%= link_to binder.title, binder.versions.last.data, :target => "_blank" if binder.format == 2 %>
 
-			<% end %>
-
-			<% if binder.format == 2 %>
-				<%= link_to binder.title, binder.versions.last.data, :target => "_blank" %>
-				(<%= link_to "Edit", edit_binder_path(binder) %>)
-			<% end %>
+			(<%= link_to "Edit", edit_binder_path(binder) %>)
 
 		<% else %>
 	  		<%= link_to binder.title, binder %>
 	  	<% end %>
+	  		(<%= link_to "Move", move_binder_path(binder) %>)
+	  		(<%= link_to "Delete", binder_path(binder), :method => :delete %>)
 	  		<%= !binder.body.blank? ? ("(#{binder.body[0..20]}" + (binder.body.length > 20 ? "...)" : ")")) : "" %>
 	  <br />
 	<% end %>
