--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,5 +2,6 @@
 <p>app/views/home/index.html.erb</p>
 <% if signed_in? %>
 	<%= link_to teachers_path, teachers_path %><br />
-	<%= link_to binders_path, binders_path %>
+	<%= link_to binders_path, binders_path %><br />
+	<%= link_to tags_path, tags_path %>
 <% end %>
