--- a/app/views/binders/index.html.erb
+++ b/app/views/binders/index.html.erb
@@ -7,6 +7,7 @@
 	<% @binders.each do |binder| %>
 	<%= link_to binder.title, binder %>
   	(<%= link_to "Move", move_binder_path(binder) %>)
+  	(<%= link_to "Delete", binder_path(binder), :method => :delete %>)
   	<%= !binder.body.blank? ? ("(#{binder.body[0..20]}" + (binder.body.length > 20 ? "...)" : ")")) : "" %>
   	<br />
 	<% end %>
