--- a/app/views/teachers/tags.html.erb
+++ b/app/views/teachers/tags.html.erb
@@ -6,24 +6,28 @@
 	<!-- f.error_messages -->
 	<%= render 'shared/error_messages', object: f.object %>
 
-	<table><tr><td valign="top">
-	<% (0..19).each do |grade_level| %>
-	<%= check_box( "tag", "grade_levels", { :id => "tag_grade_levels",
-						:name => "tag[grade_levels][]",
-						:checked => grade_level_check_box_value(grade_level) },
-						grade_level_string_by_index(grade_level)  ) %>
-	<%= f.label :grade_levels[grade_level], grade_level_title_by_index(grade_level) %><br />
-	<% end %>
-	</td>
-	<td valign="top">
-	<% (0..11).each do |subject| %>
-	<%= check_box( "tag", "subjects",     { :id => "tag_subjects",
-						:name => "tag[subjects][]",
-						:checked => subject_check_box_value(subject) },
-						subject_string_by_index(subject) )%>
-	<%= f.label :subjects[subject], subject_title_by_index(subject) %><br />
-	<% end %>
-	</td></tr></table>
+	<table>
+		<tr>
+			<td valign="top">
+				<% (0..19).each do |grade_level| %>
+				<%= check_box( "tag", "grade_levels", { :id => "tag_grade_levels",
+									:name => "tag[grade_levels][]",
+									:checked => grade_level_check_box_value(grade_level) },
+									grade_level_string_by_index(grade_level)  ) %>
+				<%= f.label :grade_levels[grade_level], grade_level_title_by_index(grade_level) %><br />
+				<% end %>
+				</td>
+				<td valign="top">
+				<% (0..11).each do |subject| %>
+				<%= check_box( "tag", "subjects",     { :id => "tag_subjects",
+									:name => "tag[subjects][]",
+									:checked => subject_check_box_value(subject) },
+									subject_string_by_index(subject) ) %>
+				<%= f.label :subjects[subject], subject_title_by_index(subject) %><br />
+				<% end %>
+			</td>
+		</tr>
+	</table>
 
 	<br />
 
