--- a/app/views/binders/copy.html.erb
+++ b/app/views/binders/copy.html.erb
@@ -14,6 +14,6 @@
     <%= f.select(:parent, options_from_collection_for_select(@binders, :id, :title)) %></div>
   <% end %>
 
-  <div><%= f.submit "Move Binder" %></div>
+  <div><%= f.submit "Copy" %></div>
 
 <% end %>
