--- a/app/views/binders/show.html.erb
+++ b/app/views/binders/show.html.erb
@@ -5,7 +5,7 @@
 	<% if parent["id"] == "0" %>
 		<%= link_to "Home", binders_path %> /
 	<% else %>
-		<%= link_to parent["title"], binder_path(parent["id"])  %> /
+		<%= link_to parent["title"], binder_path(parent["id"]) %> /
 	<% end %>
 <% end %><%= link_to @binder.title, binder_path(@binder) %></p>
 
@@ -20,21 +20,14 @@
 		Empty
 	<% end %>
 	<% @children.each do |binder| %>
-		<% if binder.format == 1 %>
-
-			<%= link_to binder.title, binder.versions.last.file.url %>
-			
-			<% #link_to binder.title, binder.versions.last.data, :target => "_blank" if binder.format == 2 %>
-
-			(<%= link_to "Edit", edit_binder_path(binder) %>)
-
-		<% else %>
-	  		<%= link_to binder.title, binder %>
-	  	<% end %>
-	  		(<%= link_to "Move", move_binder_path(binder) %>)
-	  		(<%= link_to "Copy", copy_binder_path(binder) %>)
-	  		(<%= link_to "Delete", binder_path(binder), :method => :delete %>)
-	  		<%= !binder.body.blank? ? ("(#{binder.body[0..20]}" + (binder.body.length > 20 ? "...)" : ")")) : "" %>
+  		<%= link_to binder.title, binder %>
+		<%= link_to "(Edit)", edit_binder_path(binder) if binder.type == 2 %>
+  		(<%= link_to "Move", move_binder_path(binder) %>)
+  		(<%= link_to "Copy", copy_binder_path(binder) %>)
+  		(<%= link_to "Delete", binder_path(binder), :method => :delete %>)
+  		<%= "(#{binder.body[0..20]}" + (binder.body.length > 20 ? "...)" : ")") if !binder.body.blank? %>
+  		<%= "(#{binder.files} files, #{binder.folders} folders)" if binder.type == 1 %>
+  		(<%= binder.type == 1 ? binder.total_size : binder.versions.last.size %>b)
 	  <br />
 	<% end %>
 </div>
