--- a/app/views/binders/show.html.erb
+++ b/app/views/binders/show.html.erb
@@ -22,6 +22,8 @@
 	<% @children.each do |binder| %>
   		<%= link_to binder.title, binder %>
 		<%= link_to "(Edit)", edit_binder_path(binder) if binder.type == 2 %>
+		<%= link_to "(Update)", new_binder_version_path(binder) if binder.type == 2 %>
+		<%= link_to "(Versions)", binder_versions_path(binder) if binder.type == 2 %>
   		(<%= link_to "Move", move_binder_path(binder) %>)
   		(<%= link_to "Copy", copy_binder_path(binder) %>)
   		(<%= link_to "Delete", binder_path(binder), :method => :delete %>)
