finished read only view

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -49,6 +49,6 @@
 <%= "[Home]" if @owned_root_binders.any? %>
 <br />
 <% @owned_root_binders.each do |root_binder| %>
-	>&nbsp;&nbsp;<%= link_to "#{root_binder.title}", "/teachers/#{params[:id]}/binder/#{root_binder.id}" %>
+	&nbsp;&nbsp;&nbsp;[<%= link_to "#{root_binder.title}", "/teachers/#{params[:id]}/binder/#{root_binder.id}" %>]
 	<br />
 <% end %>
