--- a/app/views/binders/edit.html.erb
+++ b/app/views/binders/edit.html.erb
@@ -6,32 +6,17 @@
   <div><%= f.label :title, "Title" %><br />
   <%= f.text_field :title %></div>
 
-  <% if @binder.type == 2 %>
+  <% if @binder.format == 2 && @binder.type == 2 %>
 
-    <% if @binder.format == 1 %>
+    <%= f.fields_for @binder.versions.last do |g| %>
 
-      <%= f.fields_for @binder.versions.last do |g| %>
-
-        <div><%= g.label :file, "File:" %><br />
-        <%= g.file_field :file %></div>
-
-        <% end %>
-
-    <% end %>
-
-
-    <% if @binder.format == 2 %>
-
-      <%= f.fields_for @binder.versions.last do |g| %>
-
-        <div><%= g.label :data, "URL:" %><br />
-        <%= g.text_field :data %></div>
-      
-      <% end %>
-
+      <div><%= g.label :data, "URL:" %><br />
+      <%= g.text_field :data %></div>
+    
     <% end %>
 
   <% end %>
+
 
   <div><%= f.label :body, "Body" %><br />
   <%= f.text_area  :body %></div>
