--- a/app/views/binders/new.html.erb
+++ b/app/views/binders/new.html.erb
@@ -12,6 +12,25 @@
 
   <div><%= f.label :body, "Body" %><br />
   <%= f.text_area  :body %></div>
+<br />
+<div>Permissions for this item:<br /><br />
+
+  <%= label_tag :type, "Type:" %><br />
+  <%= select_tag :type, options_for_select([1, 3], 3) %><br />
+  <br />
+  <%= label_tag :shared_id, "Share with: (only used if Type = 1)" %><br />
+  <%= select_tag :shared_id, options_from_collection_for_select(@colleagues, :id, :full_name)  %><br />
+  <br />
+  <%= label_tag :auth_level, "Authorization Level (1 = R/W, 2 = RO)" %><br />
+  <%= select_tag :auth_level, options_for_select([1, 2], 2) %>
+  <br />
+  <br />
+  <%= check_box_tag :accept %>
+  <%= label_tag :accept, "Apply these Permissions?" %>
+  <br />
+  <br />
+
+</div>
 
   <div><%= f.submit "Create Binder" %></div>
 
