--- a/app/views/binders/newcontent.html.erb
+++ b/app/views/binders/newcontent.html.erb
@@ -1,7 +1,7 @@
 <h3>Binders#newcontent</h3>
 <p>app/views/binders/newcontent.html.erb</p>
 
-<%= form_for Binder.new, :url => binders_newcontent_path do |f| %>
+<%= form_for Binder.new, :url => new_binder_content_path do |f| %>
 
   <div><%= f.label :title, "Title" %><br />
   <%= f.text_field :title %></div>
