--- a/app/views/binders/trash.html.erb
+++ b/app/views/binders/trash.html.erb
@@ -1,6 +1,6 @@
-<h3>Binders#index</h3>
-<p>app/views/binders/index.html.erb</p>
-<p>Currently In: <%= link_to "Home", binders_path %> </p>
+<h3>Binders#trash</h3>
+<p>app/views/binders/trash.html.erb</p>
+<p>Currently In: <%= link_to "Trash", binders_path %> </p>
 
 <div>Contents:
 	<br />
@@ -18,5 +18,4 @@
 	<% end %>
 </div>
 <br />
-<%= link_to "Create new binder", new_binder_path %><br /><br />
-<%= link_to "Trash", trash_path %>
+<%= link_to "Home", binders_path %>
